InSCAPE/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gisdefs.h

int G_asprintf(char **, const char *, ...)
    __attribute__ ((format(printf, 2, 3)));


/* debug.c */
int G_debug(int, const char *, ...) __attribute__ ((format(printf, 2, 3)));


/* done_msg.c */
int G_done_msg(const char *, ...) __attribute__ ((format(printf, 1, 2)));

void G_message(const char *, ...) __attribute__ ((format(printf, 1, 2)));

void G_verbose_message(const char *, ...)
    __attribute__ ((format(printf, 1, 2)));

void G_important_message(const char *, ...)
    __attribute__ ((format(printf, 1, 2)));

int G_fatal_error(const char *, ...) __attribute__ ((format(printf, 1, 2)))
    __attribute__ ((noreturn));

int G_warning(const char *, ...) __attribute__ ((format(printf, 1, 2)));


/* snprintf.c */
int G_snprintf(char *, size_t, const char *, ...)
    __attribute__ ((format(printf, 3, 4)));