invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gis.h


 /**/ typedef enum
{
    G_OPT_WHERE,		/* SQL where conditions */
    G_OPT_TABLE,		/* table name */
    G_OPT_DRIVER,		/* driver name */
    G_OPT_DATABASE,		/* database name */
    G_OPT_COLUMN,		/* one attr column */
    G_OPT_COLUMNS,		/* one or more attr columns */

    G_OPT_I_GROUP,		/* old input imagery group */
    G_OPT_I_SUBGROUP,		/* old input imagery subgroup */
    G_OPT_R_INPUT,		/* old input raster map */
    G_OPT_R_INPUTS,		/* old input raster maps */
    G_OPT_R_OUTPUT,		/* new output raster map */
    G_OPT_R_MAP,		/* old input raster map */
    G_OPT_R_MAPS,		/* old input rasters map */
    G_OPT_R_BASE,		/* old input base raster map */
    G_OPT_R_COVER,		/* old input cover raster map */
    G_OPT_R_ELEV,		/* old input elevation raster map */
    G_OPT_R_ELEVS,		/* old input elevation raster maps */

    G_OPT_R3_INPUT,		/* old input raster3d map */
    G_OPT_R3_INPUTS,		/* old input raster3d maps */
    G_OPT_R3_OUTPUT,		/* new output raster3d map */
    G_OPT_R3_MAP,		/* old input raster3d map */
    G_OPT_R3_MAPS,		/* old input raster3d maps */

    G_OPT_V_INPUT,		/* old input vector map */
    G_OPT_V_INPUTS,		/* old input vector maps */
    G_OPT_V_OUTPUT,		/* new output vector map */
    G_OPT_V_MAP,		/* old input vector map */
    G_OPT_V_MAPS,		/* old input vector maps */
    G_OPT_V_TYPE,		/* primitive type */
    G_OPT_V3_TYPE,		/* primitive type, 2D and 3D */
    G_OPT_V_FIELD,		/* layer number (layers used to be called fields) */
    G_OPT_V_CAT,		/* one category */
    G_OPT_V_CATS,		/* more categories */
    G_OPT_V_ID, 		/* one feature id */
    G_OPT_V_IDS,		/* more feature ids */

    G_OPT_F_INPUT,		/* old input file */
    G_OPT_F_OUTPUT,		/* new output file */
    G_OPT_F_SEP,		/* data field separator */

    G_OPT_C_FG,			/* foreground color */
    G_OPT_C_BG			/* background color */
} STD_OPT;

/* Element types */
enum
{				/* Dir */
    G_ELEMENT_RASTER = 1,	/* cell */
    G_ELEMENT_RASTER3D = 2,	/* 3dcell */
    G_ELEMENT_VECTOR = 3,	/* vector */
    G_ELEMENT_OLDVECTOR = 4,	/* GRASS < 5.7 vector */
    G_ELEMENT_ASCIIVECTOR = 5,	/* ASCII vector */
    G_ELEMENT_ICON = 6,		/* icon */
    G_ELEMENT_LABEL = 7,	/* labels */
    G_ELEMENT_SITE = 8,		/* sites */
    G_ELEMENT_REGION = 9,	/* region */
    G_ELEMENT_REGION3D = 10,	/* 3dregion */
    G_ELEMENT_GROUP = 11,	/* group */
    G_ELEMENT_3DVIEW = 12	/* 3dview */
};


/*=========================== Typedefs/Structures ==========================*/

typedef int CELL;

typedef double DCELL;

typedef float FCELL;


typedef int RASTER_MAP_TYPE;


/* for G_get_raster_sample() */
typedef int INTERP_TYPE;